fix collapse bug

--- a/src/css/collapse.scss
+++ b/src/css/collapse.scss
@@ -13,7 +13,7 @@ $black: #0000;
 .collapse {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+ /*   justify-content: center;*/
     background-color: #F6F6F6;
     border-radius: 5px;
 
